--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "@code-fellows/supergoose": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.0",
     "morgan": "^1.10.0",
+    "supergoose": "^0.2.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
